# ChemVisualizer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.qml
ChemView/: AtomMaterials.qml  CMakeLists.txt  ChemView.qml  LatticeNode.qml  Qt3DLine.qml  Qt3DViewer.qml  StructureNode.qml  atom.cpp  atom.h  reader.cpp  reader.h  structure.cpp  structure.h
